[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/time-tracker/TrackerSession.gd" type="Script" id=1]
[ext_resource path="res://addons/time-tracker/SectionGraph.gd" type="Script" id=2]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=4]
data = {
"data": PoolByteArray( 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42, 37, 37, 42 ),
"format": "RGB8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id=5]
flags = 4
flags = 4
image = SubResource( 4 )
size = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=6]
texture = SubResource( 5 )
region_rect = Rect2( 0, 0, 8, 8 )

[node name="TrackerSession" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 22.0

[node name="NameLabel" type="Label" parent="Information"]
margin_top = 4.0
margin_right = 494.0
margin_bottom = 18.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
clip_text = true

[node name="EditNameButton" type="Button" parent="Information"]
margin_left = 498.0
margin_right = 526.0
margin_bottom = 22.0
hint_tooltip = "Edit the name of this session."
icon = SubResource( 2 )
flat = true

[node name="NameEdit" type="LineEdit" parent="Information"]
visible = false
margin_left = 124.0
margin_right = 244.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )

[node name="SaveNameButton" type="Button" parent="Information"]
visible = false
margin_left = 156.0
margin_right = 184.0
margin_bottom = 22.0
hint_tooltip = "Save the name change."
icon = SubResource( 2 )
flat = true

[node name="CancelNameButton" type="Button" parent="Information"]
visible = false
margin_left = 156.0
margin_right = 184.0
margin_bottom = 22.0
hint_tooltip = "Cancel the name change."
icon = SubResource( 2 )
flat = true

[node name="ElapsedLabel" type="Label" parent="Information"]
margin_left = 530.0
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "less than a second"
align = 2

[node name="ExpandSectionsButton" type="Button" parent="Information"]
visible = false
margin_left = 1012.0
margin_right = 1024.0
margin_bottom = 22.0
hint_tooltip = "Show detailed information."
icon = SubResource( 2 )
flat = true

[node name="Sections" type="PanelContainer" parent="."]
visible = false
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 6 )

[node name="Layout" type="VBoxContainer" parent="Sections"]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartedTime" type="HBoxContainer" parent="Sections/Layout"]
margin_right = 40.0
margin_bottom = 40.0
hint_tooltip = "1970-01-01T00:00:00Z"

[node name="StartedTimeLabel" type="Label" parent="Sections/Layout/StartedTime"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Started: "

[node name="StartedTimeValue" type="Label" parent="Sections/Layout/StartedTime"]
margin_right = 40.0
margin_bottom = 14.0
text = "3:00"

[node name="StoppedTime" type="HBoxContainer" parent="Sections/Layout"]
margin_right = 40.0
margin_bottom = 40.0
hint_tooltip = "1970-01-01T00:00:00Z"

[node name="StoppedTimeLabel" type="Label" parent="Sections/Layout/StoppedTime"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Stopped: "

[node name="StoppedTimeValue" type="Label" parent="Sections/Layout/StoppedTime"]
margin_right = 40.0
margin_bottom = 14.0
text = "3:00"

[node name="SectionList" type="VBoxContainer" parent="Sections/Layout"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 7.0

[node name="SectionGraph" type="Control" parent="Sections/Layout"]
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 30.0
